# ortellius-lite

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
ortellius_lite/: __init__.py  __main__.py  access_map.py  actions.py  imported_models.py  typing.py
ortellius_lite/tests/: __init__.py  test_actions.py
stubs/: pyghidra.pyi
test_input/: firmware_shadow.json  ranking.txt
