[build-system]
requires = ["setuptools>=42", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ortellius_lite"]

[tool.mypy]
strict = true
packages = "ortellius_lite"
mypy_path = "stubs"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203", # incorrect-blank-line-before-class: class docstring is not preceded by a blank line
  "D212", # multi-line-summary-first-line: docstring summary is not on the first physical line
  "COM812", # missing-trailing-comma: absence of trailing commas
  "TID252", # relative-imports: use of relative imports
]

[project]
name = "ortellius-lite"
version = "3.3.2"
authors = [
  { name="David Malaschonok", email="david.malaschonok@sit.fraunhofer.de" },
]
description = "A tool for analyzing and comparing SVD files for ARM Cortex-M microcontrollers."
dependencies = [
  "pyghidra",
  "serstor",
  "svdmap",
]

[project.optional-dependencies]
dev = [
  "ghidra-stubs",
  "mypy",
  "prek",
  "ruff",
]
